<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutAuthorActivity">

    <TextView
        android:id="@+id/aboutAuthorTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_the_author"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <ImageView
        android:id="@+id/about_author_img"
        android:layout_width="255dp"
        android:layout_height="187dp"
        android:contentDescription="@string/this_is_an_img_of_me_while_programming_this_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutAuthorTitleTextView"
        app:layout_constraintVertical_bias="0.038"
        app:srcCompat="@drawable/about_author_img" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/author_description"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_author_img"
        app:layout_constraintVertical_bias="0.0" />
    <Button
        android:id="@+id/aboutTheAuthorBckBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/this_nice_green_that_I_like"
        android:foregroundTint="@color/this_nice_green_that_I_like"
        android:text="@string/bck_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/this_nice_green_that_I_like" />
</androidx.constraintlayout.widget.ConstraintLayout>